[package]
name = "wasm"
version = "0.1.0"
authors = ["Jean-Michel Nadeau <jeanmichel88@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
crc32fast = "1.4.2"
serde_json = "1.0.133"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
